# chatbot

./: .gitignore  LICENSE  README.md  compose.yml  run_interview.sh
chatback/: .dockerignore  Dockerfile  NIX_SETUP.md  README.md  data  pipreqs_output.txt  pyproject.toml  shell.nix
chatback/alembic/: env.py
chatback/alembic/versions/: chatbot_schema.py
chatback/app/: database.py  main.py
chatback/app/api/: deps.py
chatback/app/api/v1/: api.py
chatback/app/core/: auth.py  base_agent.py  config.py  database.py  logging_config.py  path_utils.py  security.py  version.py
chatback/app/crud/: __init__.py  base.py  crud_group.py  crud_user.py
chatback/app/db/: base.py  base_class.py  session.py
chatback/app/models/: __init__.py  chat.py  group.py  user.py
chatback/app/routers/: message.py
chatback/app/schemas/: __init__.py  agents.py  base_schemas.py  chat.py  group.py  qdrant.py  srs_chat.py  token.py  user.py
chatback/app/services/: openai_service.py  vector_store.py
chatback/scripts/: add_activity.py  add_class.py  add_group.py  add_project.py  add_usecase.py  add_user.py  api-test-ad.py  api-test-all.py  api-test-cd.py  api-test-ud.py  check_imports.py  cleanup_legacy_agents.py  compare_deps.py  del_group.py  del_user.py  ensure_directories.py  generate_diagrams.py  get_chat.py  groups.py  mod_group.py  mod_user.py  run_interview.py  start.sh  users.py  verify_langgraph.py  verify_project_system.py  verify_user.py
chatback/tests/: test_full_process.py  test_qdrant.py
chatback/tests/agents/: test_activity.py  test_agent_workflow.py  test_analyze_interview.py  test_class.py  test_diagram_agent.py  test_document_agents.py  test_introduction.py  test_langgraph.py  test_save_interview.py  test_studio copy 2.py  test_studio copy.py  test_studio.py  test_usecase.py
chatback/tests/chat/: test_chat_manager_integration.py  test_diagram_phase.py  test_documentation_transition.py  test_interview_filename.py  test_interview_to_requirements.py  test_requirements_phase.py
(+152 files in other folders)
